--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.95.3",
+    "cloudinary": "^2.9.0",
     "firebase": "^12.9.0",
     "framer-motion": "^12.34.1",
     "next": "16.1.6",
